[Blog-45] add 面试补充

--- a/_posts/2020-08-30-Java-对象.md
+++ b/_posts/2020-08-30-Java-对象.md
@@ -8,7 +8,9 @@ keywords: java
 
 
 
-# Java对象创建![java-对象创建过程](/images/posts/java-对象创建过程.png)
+# Java对象创建
+
+![java-对象创建过程](/images/posts/java-对象创建过程.png)
 
 1.类加载检查: 虚拟机遇到一条 new 指令时，首先将去检查这个指令的参数是否能在常量池中定位到 这个类的符号引用，并且检查这个符号引用代表的类是否已被加载过、解析和初始化过。如果没有，那 必须先执行相应的类加载过程。 
 
@@ -56,7 +58,127 @@ keywords: java
 
 ![java-可达性分析](/images/posts/java-可达性分析.png)
 
-## 强引用**,**软引用**,**弱引用**,**虚引用 
+## 强引用**,**软引用**,**弱引用**,**虚引用
+
+### 强引用
+
+强引用是默认支持，当内存不足的时候，JVM开始垃圾回收，对于强引用的对象，就算是出现了OOM也不会回收对象。
+
+强引用是最常见的普通对象引用，只要还有强引用指向对象，对象就存活，垃圾回收器不会处理存活对象。一般把一个对象赋给一个引用变量，这个引用变量就是强引用。当一个对象被强引用变量所引用，它就处于可达状态，是不会被垃圾回收的，即使之后都不会再用到了，也不会回收。因此强引用是造成Java内存泄漏的主要原因之一。
+
+对于一个普通对象，如果没有其他引用关系，只要超过了引用的作用域或者显式地将相应的强引用赋值为null，一般认为就是可以被垃圾回收了。（具体的回收时机看垃圾回收策略）
+
+下例中，b就是强引用。
+
+```java
+public static void main(String[] args) { 
+        Object a = new Object(); 
+         Object b = a; 
+         a = null; 
+         System.out.println(b);//java.lang.Object@4554617c
+    }
+```
+
+### 软引用
+
+软引用是一种相对强引用弱化了一些的引用，用java.lang.ref.SoftReference实现，可以让对象豁免一些垃圾收集。当系统内存充足的时候，不会被回收；当系统内存不足的时候，会被回收。
+
+软引用一般用于对内存敏感的程序中，比如高速缓存。
+
+```java
+import java.lang.ref.SoftReference; 
+
+public class SoftReferenceDemo { 
+   public static void main(String[] args) { 
+        Object a = new Object(); 
+       SoftReference<Object> softReference = new SoftReference<>(a);//软引用
+        //a和软引用指向同一个对象
+       System.out.println(a);//java.lang.Object@4554617c
+         System.out.println(softReference.get());//java.lang.Object@4554617c 10 
+         //内存够用，软引用不会被回收
+        a = null;          
+         System.gc();//内存够用不会自动gc，手动唤醒gc
+         System.out.println(a);//null
+         System.out.println(softReference.get());//java.lang.Object@4554617c 16 
+         //内存不够用时
+        try{              //配置Xms和Xmx为5MB
+       byte[] bytes = new byte[1024*1024*30];//设置30MB超内存
+        }catch (Throwable e){  e.printStackTrace();         }finally {             System.out.println(a);//null
+             System.out.println(softReference.get());//null
+ } 
+ }
+ }
+```
+
+
+
+### 弱引用
+
+弱引用需要用java.lang.ref.WeakReference实现，它比软引用的生存期更短，对于弱引用的对象来说，只要垃圾回收机制一运行，不管JVM的内存空间是否够，都会回收该对象的占用内存
+
+```java
+import java.lang.ref.WeakReference; 
+
+public class SoftReferenceDemo { 
+    public static void main(String[] args) { 
+        Object a = new Object(); 
+        WeakReference<Object> softReference = new WeakReference<>(a);//软引用
+        //a和弱引用指向同一个对象
+        System.out.println(a);//java.lang.Object@4554617c
+         System.out.println(softReference.get());//java.lang.Object@4554617c 10 
+        //内存够用，弱引用也会被回收
+        a = null;          System.gc();//内存够用不会自动gc，手动唤醒gc
+        System.out.println(a);//null
+        System.out.println(softReference.get());//null
+} 
+}
+```
+
+### 虚引用
+
+虚引用要通过**java.lang.ref.PhantomReference**类来实现，虚引用不会决定对象的生命周期，如果一个对象只有虚引用，就相当于没有引用，在任何时候都可能会被垃圾回收器回收。它不能单独使用也不能访问对象，虚引用必须和引用队列联合使用。
+
+虚引用的主要作用是跟踪对象被垃圾回收的状态，仅仅是提供一种确保对象被**finalize**以后，做某些事情的机制。
+
+**PhantomReference**的get方法总是返回null，因此无法访问对应的引用对象，设置虚引用关联唯一的目的是在对象被收集器回收的时候收到一个系统通知，或者后续添加进一步的处理。Java允许使用finalize()方法在垃圾回收器将对象从内存中清理出去之前做一些必要的清理工作。【例如实现一个监控对象的通知机制]
+
+
+
+**强引用**：不回收。
+
+**软引用**：内存不够就回收。
+
+**弱引用**：一定回收。
+
+**虚引用**：一定回收，get出来就是null，引用形同虚设，主要和引用队列联合使用，在finalize之前会被放到引用队列中。
+
+
+
+## 对象头 
+
+https://www.pianshen.com/article/21361265803/
+
+![对象头](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/对象头.png)
+
+### 对象头(Object Header)
+
+存储代表该对象运行时的一些信息, 这部分信息与对象体的内容没有关系.
+
+**Mark Word**, 代表标记信息, 例如hash code, 锁的标志位, GC分代年龄等; 
+
+**Class Word**, 代表类型信息, 该部分是一个指针, 指向方法区(元数据空间) 中的实际类型.
+
+由于在`Mark Word`中要存储不同的多种信息, 按照对象状态的不同, 又可以细分为5种状态的`Mark Word`.
+
+1. Normal – 普通状态, 由25位哈希码, 4位GC分代年龄, 1位偏向锁标识, 2位锁标志(01)组成.
+2. Biased – 偏向状态, 由23位线程标识, 2位时间戳, 4位GC分代年龄. 1位偏向锁标识, 2位锁标识(01)组成.
+3. Lightweight Locked – 轻量级锁状态, 由30位指针(指向锁记录), 2位锁标识(00)组成.
+4. Heavyweight Locked – 重量级锁状态, 由30位指针(指向重量级锁的`monitor`, monitor是一个数据结构, 会存储其他抢锁的线程), 2位锁标识(10)组成.
+5. Mared for GC – 待GC回收状态, 只有最后2位锁标识(11)有效.
+
+### 
+
+
 
 
 
