--- a/_posts/2021-02-05-Scala基础整理.md
+++ b/_posts/2021-02-05-Scala基础整理.md
@@ -7,3 +7,26 @@ keywords: Scala
 ---
 
 Scala 基础整理
+
+httpS://docs.scala-lang.org/style/naming-convenions.html#constants-valus-variable-and-methods
+
+
+scala match pattern  not use IsInstanceOf /asInstanceOf
+
+private
+
+{} 这个去掉
+
+map 多使用
+
+Object after class
+
+com.typesafe.akka /akka-http-spray-json /akka-http-testkit/akka-cluster
+
+
+com.github.romix.akka /akka-kryo-serialization
+
+
+Actor
+
+https://docs.scala-lang.org/style/index.html
