[Blog-52] update image url

--- a/_posts/2021-03-05-Alluxio-介绍.md
+++ b/_posts/2021-03-05-Alluxio-介绍.md
@@ -10,15 +10,15 @@ keywords: alluxio
 
 ## Architecture
 
-![Alluxio-architecture](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/Alluxio-architecture.png)
+![Alluxio-architecture](/images/posts/Alluxio-architecture.png)
 
 ## Master
 
-![Alluxio-Master](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/Alluxio-Master.png)
+![Alluxio-Master](/images/posts/Alluxio-Master.png)
 
 ## Worker
 
-![Alluxio-Worker](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/Alluxio-Worker.png)
+![Alluxio-Worker](/images/posts/Alluxio-Worker.png)
 
 ## Client Read
 
