--- a/_posts/2020-08-30-Kafka-源码.md
+++ b/_posts/2020-08-30-Kafka-源码.md
@@ -116,7 +116,7 @@ Deallocate 负责释放线程
 
 ## 传统访问方法
 
-![I:O读取流程](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/I:O读取流程.jpg)
+![I:O读取流程](/images/posts/I:O读取流程.jpg)
 
 ### Read
 
@@ -170,7 +170,7 @@ sendfile(socket_fd, file_fd, len);
 
 通过 sendfile 系统调用，数据可以直接在内核空间内部进行 I/O 传输，从而省去了数据在用户空间和内核空间之间的来回拷贝。与 mmap 内存映射方式不同的是， sendfile 调用中 I/O 数据对用户空间是完全不可见的。也就是说，这是一次完全意义上的数据传输过程。
 
-![sendfile](/Users/jessica/ideaproject-github/jessica0530.github.io/images/posts/sendfile.jpg)
+![sendfile](/images/posts/sendfile.jpg)
 
 
 
