[Blog-59] update onedata && 数据治理

--- a/_posts/2023-04-06-数据治理.md
+++ b/_posts/2023-04-06-数据治理.md
@@ -6,19 +6,36 @@ description: 数据治理
 keywords: 数据治理
 ---
 
-数据治理
+## 数据治理
 
 企业如何通过一组适当的预定义规则和流程,
 管理其数据的可用性,易用性,完整性和安全性
 
-
 ## 顶层设计法
 
-现状调研分析 - 现状调研-资料收集/访谈/现状与问题汇总,现状分析-问题分析/现状讨论/现状与目标差异分析/分析报告
+| 现状调研分析 |                    |      |
+| ------------ | ------------------ | ---- |
+| 现状调研     | 资料收集           |      |
+|              | 访谈               |      |
+|              | 现状与问题汇总     |      |
+| 现状分析     | 问题分析           |      |
+|              | 现状讨论           |      |
+|              | 现状与目标差异分析 |      |
+|              | 分析报告           |      |
+
 
 
 ## 技术推动法
-需求阶段 -上游 业务系统数据,核心 数据仓库/数据集市,下游 报表平台需求
-         设计  数据模型设计 -主题域划分/数仓分层/逻辑模型设计   报表设计-指标管理/维度管理/报表设计
-         开发  数仓开发-数据接入/ETL开发/任务调度设计  可视化开发  报表开发
-         测试  测试用例-单元测试/单作业测试  集成测试-数据任务联调测试
+
+| 需求阶段 |                                    |                                  |
+| -------- | ---------------------------------- | -------------------------------- |
+| 上游     | 业务系统数据,核心数据仓库/数据集市 |                                  |
+| 下游     | 报表平台需求                       |                                  |
+| 设计     | 数据模型设计                       | 主题域划分/数仓分层/逻辑模型设计 |
+|          | 报表设计                           | 指标管理/维度管理/报表设计       |
+| 开发     | 数仓开发                           | 数据接入/ETL开发/任务调度设计    |
+|          | 可视化开发                         |                                  |
+|          | 报表开发                           |                                  |
+| 测试     | 测试用例                           | 单元测试/单作业测试              |
+|          | 集成测试                           | 数据任务联调测试                 |
+
