[Blog-60] update title

--- a/_posts/2023-04-18-OneData理论.md
+++ b/_posts/2023-04-18-OneData理论.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: OneDate理论
-categories: [onedate]
-description: OneDate理论
-keywords: onedate
+title: OneData理论
+categories: [onedata]
+description: OneData理论
+keywords: onedata
 ---
 
 https://zhuanlan.zhihu.com/p/426005241
